--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,9 @@
 		"issues": "http://github.com/bcairns/silverstripe-backuprestore/issues"
 	},
 	"require": {
-		"silverstripe/framework": ">=4.1.0",
-		"silverstripe/cms": ">=4.1.0"
+		"silverstripe/framework": "^4.1.0",
+		"silverstripe/cms": "^4.1.0"
 	},
-	"target-dir": "backuprestore",
 	"autoload": {
 		"psr-4": {
 			"BCairns\\BackupRestore\\": "src/"
