--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
 		"issues": "http://github.com/bcairns/silverstripe-backuprestore/issues"
 	},
 	"require": {
-		"silverstripe/framework": "^4.1.0",
-		"silverstripe/cms": "^4.1.0"
+		"silverstripe/framework": "^4.1.0|^5",
+		"silverstripe/cms": "^4.1.0|^5"
 	},
 	"autoload": {
 		"psr-4": {
